# paramath

./: .gitignore  README.md  paramath.py  paramath_docs.md  pyproject.toml
docs/: paramath_docs.md
paramath/: __init__.py  __main__.py  cli.py
paramath_tests/: aliasing.pm  cache_test.pm  dupe_test.pm  edge_cases.pm  functions.pm  identity_simplification.pm  lambdas.pm  literal_simplification.pm  loops.pm  operator_expansion.pm  python_parse.pm  repeats.pm  sympy_integration.pm
paramath_tests/examples/: number_test.pm
